tests/fail_cases/just_comma_vinto.rs
use wec::vinto;

// Make sure the behavior of bec![,] is the same as vec![,].

fn main() {
    let v = vinto![,];
}
